# friendshipcoin-core

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  friendshipcoin-qt.pro  install-unix.sh  install.sh  libtool
build-aux/m4/: friendshipcoin_find_bdb48.m4  friendshipcoin_qt.m4  friendshipcoin_subdir_to_include.m4
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
doc/release-notes/: release-notes-4.0.0.md
share/: genbuild.sh
src/: Makefile.am  Makefile.include  activemasternode.cpp  activemasternode.h  base58.cpp  base58.h  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  clientversion.h  darksend.cpp  darksend.h  friendshipcoin-cli.cpp  friendshipcoind.cpp  hash.h  init.cpp  init.h  instantx.cpp  kernel.cpp  main.cpp  main.h  makefile.bsd  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  masternode-payments.cpp  masternode.h  masternodeconfig.cpp  masternodeconfig.h  miner.cpp  neoscrypt.cpp  neoscrypt.h  net.cpp  netbase.cpp  netbase.h  noui.h  (+26 more)
src/config/: friendshipcoin-config.h  friendshipcoin-config.h.in  stamp-h1
src/crypto/: common.h
src/qt/: addeditadrenalinenode.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  blockbrowser.cpp  coincontroldialog.cpp  darksendconfig.cpp  editaddressdialog.cpp  guiutil.cpp  masternodemanager.cpp  messagemodel.cpp  messagemodel.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentserver.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  sendmessagesdialog.cpp  sendmessagesentry.cpp  signverifymessagedialog.cpp  tradingdialog.cpp  tradingdialog.h  transactiondesc.cpp  transactionrecord.cpp  walletmodel.cpp
src/qt/forms/: aboutdialog.ui  addeditadrenalinenode.ui  addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  masternodemanager.ui  messagepage.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsdialog.ui  signverifymessagedialog.ui  tradingdialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  (+25 more)
src/qt/res/: bitcoin-qt.rc
src/rpc/: blockchain.cpp  client.cpp  darksend.cpp  dump.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  rawtransaction.cpp  server.cpp  server.h  smessage.cpp
src/test/: base58_tests.cpp  key_tests.cpp
